Fixes visibility button alignment

--- a/src/apiExplorer.scss
+++ b/src/apiExplorer.scss
@@ -22,6 +22,7 @@
 
 .explorer-visibility {
 	float: right;
+	margin-right: 5px;
 	position: relative;
 }
 
